src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>The Reporting Group for this campaign. If multiple Reporting Groups are involved, select the Group contributing the most budget</inlineHelpText>
        <label>Reporting Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Real World Solutions Global</fullName>
                </value>
                <value>
                    <fullName>Research and Development Solutions</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Europe, Middle East and Africa</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Analytics and Consulting</fullName>
                </value>
                <value>
                    <fullName>Applied Data Science Center</fullName>
                </value>
                <value>
                    <fullName>Avacare</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Clinical Medtech</fullName>
                </value>
                <value>
                    <fullName>Clinical Tech</fullName>
                </value>
                <value>
                    <fullName>Commercial Compliance</fullName>
                </value>
                <value>
                    <fullName>Commercial Solutions</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement Solutions (previously CSMS - Contract Sales and Medical Solutions)</fullName>
                </value>
                <value>
                    <fullName>Data Transformation Analytics and Artificial Intelligence (Previously Real World Tech Platforms)</fullName>
                </value>
                <value>
                    <fullName>electronic Clinical Outcome Assessment</fullName>
                </value>
                <value>
                    <fullName>Global Market Insights</fullName>
                </value>
                <value>
                    <fullName>Information Management</fullName>
                </value>
                <value>
                    <fullName>Institute</fullName>
                </value>
                <value>
                    <fullName>Integrated Global Compliance</fullName>
                </value>
                <value>
                    <fullName>Lab / Q2 Solutions</fullName>
                </value>
                <value>
                    <fullName>MedTech</fullName>
                </value>
                <value>
                    <fullName>Natural Language Processing (Linguamatics)</fullName>
                </value>
                <value>
                    <fullName>OneKey</fullName>
                </value>
                <value>
                    <fullName>Orchestrated Customer Engagement</fullName>
                </value>
                <value>
                    <fullName>Patient Centered Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Goal__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1379 - Tracks the primary goal of each campaign.</description>
        <inlineHelpText>Tracks the primary goal of each campaign.</inlineHelpText>
        <label>Campaign Goal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Awareness</fullName>
                </value>
                <value>
                    <fullName>Lead Generation</fullName>
                </value>
                <value>
                    <fullName>Sales Enablement</fullName>
                </value>
                <value>
                    <fullName>Sales Initiative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <description>CRM-MC-ESPSFDCQI-389 -</description>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Triage_Instructions__c</fullName>
        <description>ESPSFDCQI-9617</description>
        <inlineHelpText>Enter triage instructions and pertinent Campaign information that will assist in lead follow up. Text, links and image attachments can be used.</inlineHelpText>
        <label>Campaign Triage Instructions</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <inlineHelpText>This field holds the Primary Channel values for the Campaign.</inlineHelpText>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Display Advertising</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event Industry</fullName>
                </value>
                <value>
                    <fullName>Event IQVIA Hosted</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paid Search</fullName>
                </value>
                <value>
                    <fullName>Paid Social</fullName>
                </value>
                <value>
                    <fullName>Organic Social</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1379 - Category of material used in the campaign.</description>
        <inlineHelpText>Category of material used in the campaign.</inlineHelpText>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Informational</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Promotional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Segment_Brand__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6375</description>
        <label>Customer Segment/Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avacare</fullName>
                </value>
                <value>
                    <fullName>IQVIA Biotech</fullName>
                </value>
                <value>
                    <fullName>IQVIA Consumer Health</fullName>
                </value>
                <value>
                    <fullName>IQVIA MedTech</fullName>
                </value>
                <value>
                    <fullName>IQVIA</fullName>
                </value>
                <value>
                    <fullName>Q2 Solutions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>CRM-QI-ESPSFDCQI-325 Unique id used for migrating Campaign records from external systems (e.g. during acquisition loads)</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Campaign records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MQLS_in_Hierarchy__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CRM-MC-ESPSFDCQI-7856</description>
        <label>MQLS in Hierarchy</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Lead__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6376</description>
        <label>Marketing Lead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Objective__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1379 - Informed by marketing plans.</description>
        <inlineHelpText>Informed by marketing plans.</inlineHelpText>
        <label>Marketing Objective</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <description>CRM-QI-ESPSFDCQI-321 Field to indicate source of migrated records. Used for data migration and reconciliation.</description>
        <inlineHelpText>Field to indicate source of migrated records. Used for data migration and reconciliation.</inlineHelpText>
        <label>Migration Source</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoOfMQLs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CRM-MC-ESPSFDCQI-7112</description>
        <label>MQLs in Campaign</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Group__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1149 -</description>
        <label>Offering Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Management Consulting</fullName>
                </value>
                <value>
                    <fullName>Payor</fullName>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1379 - The solution or product being offered.</description>
        <inlineHelpText>The solution or product being offered.</inlineHelpText>
        <label>Offering</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parents_Hierarchy__c</fullName>
        <description>CRM-MC-ESPSFDCQI-7856 To store campaign&apos;s parent Hierarchy for a count MQLS in Hierarchy</description>
        <label>Parents Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Service_Marketed__c</fullName>
        <description>CRM-MC-ESPSFDCQI-389 - Maps to &quot;Campaign Type&quot; in Eloqua</description>
        <label>Primary Service Marketed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Trial Execution</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Investigator Campaigns</fullName>
                </value>
                <value>
                    <fullName>Laboratories</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Patient &amp; Provider Engagement</fullName>
                </value>
                <value>
                    <fullName>Patient Campaigns</fullName>
                </value>
                <value>
                    <fullName>Portfolio Strategy&amp; Planning</fullName>
                </value>
                <value>
                    <fullName>Product Marketing &amp; Sales</fullName>
                </value>
                <value>
                    <fullName>Quintiles Enterprise</fullName>
                </value>
                <value>
                    <fullName>Real-World &amp; Late Phase Research</fullName>
                </value>
                <value>
                    <fullName>Technology Solutions</fullName>
                </value>
                <value>
                    <fullName>Therapeutic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Business_Area__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6377</description>
        <label>Product Business Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics Solutions</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Contract Sales &amp; Medical Solutions</fullName>
                </value>
                <value>
                    <fullName>Global Market Insights</fullName>
                </value>
                <value>
                    <fullName>Information Services</fullName>
                </value>
                <value>
                    <fullName>Integrated Global Compliance</fullName>
                </value>
                <value>
                    <fullName>Technology Solutions</fullName>
                </value>
                <value>
                    <fullName>Real World Solutions</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development Solutions</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Business_Lines__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6378</description>
        <label>Product Business Lines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Product_Business_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Analytics</fullName>
                </value>
                <value>
                    <fullName>Commercial Outsourcing Services</fullName>
                </value>
                <value>
                    <fullName>Primary Intelligence</fullName>
                </value>
                <value>
                    <fullName>Real-World Commercial</fullName>
                </value>
                <value>
                    <fullName>Commercial Consulting</fullName>
                </value>
                <value>
                    <fullName>Consumer Health Consulting</fullName>
                </value>
                <value>
                    <fullName>Financial Institutions Consulting</fullName>
                </value>
                <value>
                    <fullName>Patient Centered Platforms Consulting</fullName>
                </value>
                <value>
                    <fullName>R&amp;D Consulting</fullName>
                </value>
                <value>
                    <fullName>Value &amp; Access Consulting</fullName>
                </value>
                <value>
                    <fullName>Contract Sales and Services</fullName>
                </value>
                <value>
                    <fullName>Market Access</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs Services</fullName>
                </value>
                <value>
                    <fullName>Medical and Patient Communications</fullName>
                </value>
                <value>
                    <fullName>Patient Services</fullName>
                </value>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>Channeldynamics</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Midas and Pricing Insights</fullName>
                </value>
                <value>
                    <fullName>Regulatory Intelligence</fullName>
                </value>
                <value>
                    <fullName>Syndicated Analytics</fullName>
                </value>
                <value>
                    <fullName>Country Market Insights</fullName>
                </value>
                <value>
                    <fullName>Reference Data</fullName>
                </value>
                <value>
                    <fullName>Regulatory Compliance</fullName>
                </value>
                <value>
                    <fullName>Safety Pharmacovigilance</fullName>
                </value>
                <value>
                    <fullName>Clinical Technology</fullName>
                </value>
                <value>
                    <fullName>Commercial Compliance</fullName>
                </value>
                <value>
                    <fullName>Commercial Technology</fullName>
                </value>
                <value>
                    <fullName>Quality Technology</fullName>
                </value>
                <value>
                    <fullName>Regulatory Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1379 - The strategy set in order to achieve the overall organizational goal.</description>
        <inlineHelpText>The strategy set in order to achieve the overall organizational goal.</inlineHelpText>
        <label>Program</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region_s__c</fullName>
        <description>CRM-MC-ESPSFDCQI-389 -</description>
        <inlineHelpText>Select region the marketer is targeting.</inlineHelpText>
        <label>Region(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Europe/Middle East/Africa EMEA</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>US &amp; Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Detail__c</fullName>
        <description>CRM-MC-ESPSFDCQI-389 - Maps to &quot;Description&quot; in Eloqua</description>
        <label>Service Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acute Care &amp; Pain</fullName>
                </value>
                <value>
                    <fullName>Bioanalytical &amp; ADME Laboratories</fullName>
                </value>
                <value>
                    <fullName>Biosimilars</fullName>
                </value>
                <value>
                    <fullName>Brand &amp; Scientific Communications</fullName>
                </value>
                <value>
                    <fullName>Cardiac Safety ECG Monitoring</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Central Laboratories</fullName>
                </value>
                <value>
                    <fullName>Central Nervous System</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Clinical Biostatistics</fullName>
                </value>
                <value>
                    <fullName>Clinical Data Management</fullName>
                </value>
                <value>
                    <fullName>Clinical Monitoring</fullName>
                </value>
                <value>
                    <fullName>Clinical Trial Planning &amp; Design</fullName>
                </value>
                <value>
                    <fullName>Contract Sales</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Early Clinical Development</fullName>
                </value>
                <value>
                    <fullName>Functional Service Provider</fullName>
                </value>
                <value>
                    <fullName>Genomic Laboratories</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Infectious Diseases</fullName>
                </value>
                <value>
                    <fullName>Integrated Channel Management</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Interventional Phase IIIb/IV Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Late Phase Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Market Access</fullName>
                </value>
                <value>
                    <fullName>Market Entry/Exit</fullName>
                </value>
                <value>
                    <fullName>Market Intelligence</fullName>
                </value>
                <value>
                    <fullName>Model-based Drug Development</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Observational Research &amp; Registries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tactic__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1379 -</description>
        <label>Tactic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event Industry</fullName>
                </value>
                <value>
                    <fullName>Event IQVIA</fullName>
                    <label>Event IQVIA Hosted</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Audience_Additional_Targeting__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1379 -  A general, secondary description to better describe target audience</description>
        <inlineHelpText>A general, secondary description to better describe target audience</inlineHelpText>
        <label>Target Audience</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Audience_Functional__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1379 -  The routine set of tasks or activites undertaken by a person in a position.</description>
        <inlineHelpText>The routine set of tasks or activites undertaken by a person in a position.</inlineHelpText>
        <label>Target Audience (Functional)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Audience_Industry__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1379 - Business description / type of operation.</description>
        <inlineHelpText>Business description / type of operation.</inlineHelpText>
        <label>Target Audience (Industry)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Persona_s__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6379</description>
        <label>Target Persona(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ahmed-Epidemiology</fullName>
                </value>
                <value>
                    <fullName>Andrès-Digital Transformation</fullName>
                </value>
                <value>
                    <fullName>Andrew-Analytics Director</fullName>
                </value>
                <value>
                    <fullName>Anya-Safety</fullName>
                </value>
                <value>
                    <fullName>Carol-Clinical Monitoring</fullName>
                </value>
                <value>
                    <fullName>Chris-VP Sales</fullName>
                </value>
                <value>
                    <fullName>Dan-Quality</fullName>
                </value>
                <value>
                    <fullName>Diana-Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Edward-HEOR</fullName>
                </value>
                <value>
                    <fullName>Gilbert-Clinical Operations-Large</fullName>
                </value>
                <value>
                    <fullName>Helen-Therapeutic Expert</fullName>
                </value>
                <value>
                    <fullName>Henrietta-Compliance Officer</fullName>
                </value>
                <value>
                    <fullName>Isaac-CEO Emerging Biopharma</fullName>
                </value>
                <value>
                    <fullName>Jason-CCO Emerging Biopharma</fullName>
                </value>
                <value>
                    <fullName>Jonathan-CIO Emerging Biopharma</fullName>
                </value>
                <value>
                    <fullName>Kelly-Brand Director-Launch</fullName>
                </value>
                <value>
                    <fullName>Lee-Commercial Operations</fullName>
                </value>
                <value>
                    <fullName>Manish-VP IT Commercial</fullName>
                </value>
                <value>
                    <fullName>Nick-Therapeutic Franchise Owner</fullName>
                </value>
                <value>
                    <fullName>Paul-Market Access Lead</fullName>
                </value>
                <value>
                    <fullName>Philippe-Regulatory</fullName>
                </value>
                <value>
                    <fullName>Rachel-Clinical Operations-Small/Mid</fullName>
                </value>
                <value>
                    <fullName>Reena-VP IT Clinical</fullName>
                </value>
                <value>
                    <fullName>Regina-Market Research Lead</fullName>
                </value>
                <value>
                    <fullName>Richard-Brand Leader</fullName>
                </value>
                <value>
                    <fullName>Robert-CIO Mid/Large</fullName>
                </value>
                <value>
                    <fullName>Sara-RWE</fullName>
                </value>
                <value>
                    <fullName>Stephanie-CFO Emerging Biopharma</fullName>
                </value>
                <value>
                    <fullName>Sofia-Patient Advocacy</fullName>
                </value>
                <value>
                    <fullName>Todd-Sales Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>